--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "Portfolio",
   "version": "1.0.0",
-  "description": "Pawel Marciniuk Portfolio",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "PaweL",
+  "keywords": [
+    "gulp"
+  ],
+  "author": "Pawel",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
-    "postcss-cli": "^4.1.1"
+    "browser-sync": "^2.23.5",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean-css": "^3.9.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-html-replace": "^1.6.2",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.3",
+    "gulp-uglify": "^3.0.0",
+    "run-sequence": "^2.2.1"
   }
 }
