--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglifyes": "^0.1.3",
     "run-sequence": "^2.2.1"
   }
 }
